[gd_scene load_steps=4 format=3 uid="uid://clgpjiy6dtub8"]

[ext_resource type="Script" path="res://addons/twitcher/settings/setting_window.gd" id="1_b361f"]
[ext_resource type="Script" path="res://addons/twitcher/settings/cache_setting.gd" id="3_g2ihq"]

[sub_resource type="LabelSettings" id="LabelSettings_71vpn"]
font_size = 24

[node name="Twitcher Settings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b361f")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="Authorization" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="AuthTitle" type="Label" parent="TabContainer/Authorization"]
layout_mode = 2
text = "Authorization"
label_settings = SubResource("LabelSettings_71vpn")
horizontal_alignment = 1

[node name="ClientInfo" type="GridContainer" parent="TabContainer/Authorization"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="ClientIdTitle" type="Label" parent="TabContainer/Authorization/ClientInfo"]
layout_mode = 2
text = "Client ID: "

[node name="ClientIdInput" type="LineEdit" parent="TabContainer/Authorization/ClientInfo"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "This id is a public information and can be shared!"
text = "e0a451pmremhgy77idg3isbcwwqidd"

[node name="ClientSecretTitle" type="Label" parent="TabContainer/Authorization/ClientInfo"]
layout_mode = 2
text = "Client Secret: "

[node name="ClientSecretInput" type="LineEdit" parent="TabContainer/Authorization/ClientInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "9z5vhew231keehh7xawm7pwdm8wjdk"
secret = true

[node name="FlowTitle" type="Label" parent="TabContainer/Authorization/ClientInfo"]
layout_mode = 2
text = "Auth Flow:"

[node name="FlowInput" type="OptionButton" parent="TabContainer/Authorization/ClientInfo"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Overlay (Auth Code Flow)"
popup/item_1/text = "Game (Device Code)"
popup/item_1/id = 1
popup/item_2/text = "Game (Implicit Flow / not recommended)"
popup/item_2/id = 2
popup/item_3/text = "Userless Authentication (Client Credentials)"
popup/item_3/id = 3

[node name="Cache" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_g2ihq")
metadata/_tab_index = 1

[node name="CacheTitle" type="Label" parent="TabContainer/Cache"]
layout_mode = 2
text = "Cache"
label_settings = SubResource("LabelSettings_71vpn")
horizontal_alignment = 1

[node name="ClearEmotes" type="Button" parent="TabContainer/Cache"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Emotes (deletes the content of the cache folder)"

[node name="ClearBadges" type="Button" parent="TabContainer/Cache"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Badges (deletes the content of the cache folder)"
